--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers=[
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4"
+python = ">=3.9,<4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -45,7 +45,7 @@ Sphinx = "^4.5.0"
 
 [tool.black]
 line-length = 132
-target-version = ['py37', 'py38', 'py39', 'py310' ]
+target-version = ['py39', 'py310' ]
 include = '(src\/scripts\/.*$|\.pyi?$)'
 exclude = '''
 /(
