--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,10 @@ classifiers=[
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
-humps = "^0.2.2"
-pydantic-yaml = "^0.7.0"
+pendulum = "^2.1.2"
+attrs = "^21.4.0"
+cattrs = "^22.1.0"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -44,6 +46,7 @@ isort = "^5.10.1"
 sphinx-autoapi = "^1.8.4"
 coveralls = "^3.3.1"
 Sphinx = "^4.5.0"
+types-PyYAML = "^6.0.8"
 
 [tool.black]
 line-length = 132
