--- a/.pylintrc
+++ b/.pylintrc
@@ -356,7 +356,8 @@ function-naming-style=snake_case
 #function-rgx=
 
 # Good variable names which should always be accepted, separated by a comma.
-good-names=e, 
+good-names=d, 
+           e, 
            f,
            i,
            j,
