--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12; python_version >= "3.6"
+anyio==3.6.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 astroid==2.9.3; python_full_version >= "3.6.2" and python_version >= "3.6"
 atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==21.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
@@ -16,9 +17,10 @@ distlib==0.3.4; python_version >= "3.7" and python_full_version < "3.0.0" or pyt
 docopt==0.6.2; python_version >= "3.5"
 docutils==0.17.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 exceptiongroup==1.0.0rc8; python_version >= "3.7" and python_version <= "3.10"
+fastapi==0.78.0; python_full_version >= "3.6.1"
 filelock==3.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 identify==2.5.1; python_version >= "3.7"
-idna==3.3; python_version >= "3.7" and python_version < "4"
+idna==3.3; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 imagesize==1.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 importlib-metadata==4.11.4; python_version < "3.10" and python_version >= "3.7"
 iniconfig==1.1.1; python_version >= "3.7"
@@ -37,6 +39,7 @@ platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2" 
 pluggy==1.0.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pre-commit==2.19.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+pydantic==1.9.1; python_full_version >= "3.6.1"
 pygments==2.12.0; python_version >= "3.6"
 pylint==2.12.2; python_full_version >= "3.6.2"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
@@ -48,6 +51,7 @@ pytzdata==2020.1; python_version >= "2.7" and python_full_version < "3.0.0" or p
 pyyaml==6.0; python_version >= "3.6"
 requests==2.28.0; python_version >= "3.7" and python_version < "4"
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+sniffio==1.2.0; python_version >= "3.6" and python_full_version >= "3.6.2"
 snowballstemmer==2.2.0; python_version >= "3.6"
 sphinx-autoapi==1.8.4; python_version >= "3.6"
 sphinx==4.5.0; python_version >= "3.6"
@@ -57,6 +61,7 @@ sphinxcontrib-htmlhelp==2.0.0; python_version >= "3.6"
 sphinxcontrib-jsmath==1.0.1; python_version >= "3.6"
 sphinxcontrib-qthelp==1.0.3; python_version >= "3.6"
 sphinxcontrib-serializinghtml==1.1.5; python_version >= "3.6"
+starlette==0.19.1; python_version >= "3.6" and python_full_version >= "3.6.1"
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.6.2" and python_version >= "3.7"
 tox==3.25.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
