--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ pendulum = "^2.1.2"
 attrs = "^21.4.0"
 cattrs = "^22.1.0"
 PyYAML = "^6.0"
+fastapi = "^0.78.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
