--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
 alabaster==0.7.12; python_version >= "3.6"
 anyio==3.6.1; python_version >= "3.6" and python_full_version >= "3.6.2"
+asgiref==3.5.2; python_version >= "3.7"
 astroid==2.9.3; python_full_version >= "3.6.2" and python_version >= "3.6"
 atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==21.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
@@ -19,6 +20,7 @@ docutils==0.17.1; python_version >= "3.6" and python_full_version < "3.0.0" or p
 exceptiongroup==1.0.0rc8; python_version >= "3.7" and python_version <= "3.10"
 fastapi==0.78.0; python_full_version >= "3.6.1"
 filelock==3.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+h11==0.13.0; python_version >= "3.7"
 identify==2.5.1; python_version >= "3.7"
 idna==3.3; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 imagesize==1.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
@@ -69,6 +71,7 @@ types-pyyaml==6.0.8
 typing-extensions==4.2.0; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.7"
 unidecode==1.3.4; python_version >= "3.6"
 urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
+uvicorn==0.17.6; python_version >= "3.7"
 virtualenv==20.14.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 wrapt==1.13.3; python_full_version >= "3.6.2" and python_version >= "3.6"
 zipp==3.8.0; python_version < "3.10" and python_version >= "3.7"
