--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ attrs = "^21.4.0"
 cattrs = "^22.1.0"
 PyYAML = "^6.0"
 fastapi = "^0.78.0"
+uvicorn = "^0.17.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
