--- a/src/sensortrack/data/definition.yaml
+++ b/src/sensortrack/data/definition.yaml
@@ -3,21 +3,30 @@ name: Sensor Tracking
 description: Track historical data for SmartThings temperature and humidity sensors
 targetUrl: https://daystrom.cedar-solutions.com/smartthings/sensortrack/smartapp
 permissions:
-- r:devices
+- r:devices:*
 configPages:
 - pageName: Configuration
   sections:
   - name: Devices
     settings:
-    - id: sensor-devices
-      name: Sensor Devices
-      description: Sensor devices to track historical data for
+    - id: temperature-devices
+      name: Temperature Devices
+      description: Sensor devices to track historical temperature data for
       type: DEVICE
-      required: true
+      required: false
       multiple: true
       capabilities:
       - temperatureMeasurement
-      - relativeHumidityMeasurement
       permissions:
       - r
+    - id: humidity-devices
+      name: Humidity Devices
+      description: Sensor devices to track historical humidity data for
+      type: DEVICE
+      required: false
+      multiple: true
+      capabilities:
+        - relativeHumidityMeasurement
+      permissions:
+        - r
 
