--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -45,6 +45,7 @@ pydantic==1.9.1; python_full_version >= "3.6.1"
 pygments==2.12.0; python_version >= "3.6"
 pylint==2.12.2; python_full_version >= "3.6.2"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
+pytest-asyncio==0.18.3; python_version >= "3.7"
 pytest-testdox==3.0.1; python_version >= "3.6"
 pytest==7.1.2; python_version >= "3.7"
 python-dateutil==2.8.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
