--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ sphinx-autoapi = "^1.8.4"
 coveralls = "^3.3.1"
 Sphinx = "^4.5.0"
 types-PyYAML = "^6.0.8"
+pytest-asyncio = "^0.18.3"
 
 [tool.black]
 line-length = 132
