--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -41,6 +41,7 @@ platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2" 
 pluggy==1.0.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pre-commit==2.19.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+pycryptodomex==3.14.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pydantic==1.9.1; python_full_version >= "3.6.1"
 pygments==2.12.0; python_version >= "3.6"
 pylint==2.12.2; python_full_version >= "3.6.2"
@@ -69,6 +70,8 @@ toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (py
 tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.6.2" and python_version >= "3.7"
 tox==3.25.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 types-pyyaml==6.0.8
+types-requests==2.27.30
+types-urllib3==1.26.15
 typing-extensions==4.2.0; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.7"
 unidecode==1.3.4; python_version >= "3.6"
 urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
