--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ cattrs = "^22.1.0"
 PyYAML = "^6.0"
 fastapi = "^0.78.0"
 uvicorn = "^0.17.6"
+pycryptodomex = "^3.14.1"
+requests = "^2.28.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -53,6 +55,7 @@ coveralls = "^3.3.1"
 Sphinx = "^4.5.0"
 types-PyYAML = "^6.0.8"
 pytest-asyncio = "^0.18.3"
+types-requests = "^2.27.30"
 
 [tool.black]
 line-length = 132
