--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ fastapi = "^0.78.0"
 uvicorn = "^0.17.6"
 pycryptodomex = "^3.14.1"
 requests = "^2.28.0"
+tenacity = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
