Test signature date verification

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -25,6 +25,7 @@ warn_unused_ignores = True
 [mypy-tests.*]
 check_untyped_defs = False
 allow_untyped_defs = True
+allow_untyped_calls = True
 
 # There is no type hinting for pytest
 [mypy-pytest]
