--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -25,6 +25,7 @@ identify==2.5.1; python_version >= "3.7"
 idna==3.3; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 imagesize==1.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 importlib-metadata==4.11.4; python_version < "3.10" and python_version >= "3.7"
+influxdb-client==1.29.1; python_version >= "3.6"
 iniconfig==1.1.1; python_version >= "3.7"
 isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
 jinja2==3.1.2; python_version >= "3.7"
@@ -49,11 +50,12 @@ pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
 pytest-asyncio==0.18.3; python_version >= "3.7"
 pytest-testdox==3.0.1; python_version >= "3.6"
 pytest==7.1.2; python_version >= "3.7"
-python-dateutil==2.8.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pytz==2022.1; python_version >= "3.6"
 pytzdata==2020.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pyyaml==6.0; python_version >= "3.6"
 requests==2.28.0; python_version >= "3.7" and python_version < "4"
+rx==3.2.0; python_full_version >= "3.6.0" and python_version >= "3.6"
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 sniffio==1.2.0; python_version >= "3.6" and python_full_version >= "3.6.2"
 snowballstemmer==2.2.0; python_version >= "3.6"
