--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ uvicorn = "^0.17.6"
 pycryptodomex = "^3.14.1"
 requests = "^2.28.0"
 tenacity = "^8.0.1"
+influxdb-client = "^1.29.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
