First pass at InfluxDB client usage

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -27,6 +27,12 @@ check_untyped_defs = False
 allow_untyped_defs = True
 allow_untyped_calls = True
 
+# There is no type hinting for influxdb_client
+[mypy-influxdb_client]
+ignore_missing_imports = True
+[mypy-influxdb_client.client.exceptions]
+ignore_missing_imports = True
+
 # There is no type hinting for pytest
 [mypy-pytest]
 ignore_missing_imports = True
