Initial integration testing with InfluxDB

--- a/config/installed/sensortrack/server/application.yaml
+++ b/config/installed/sensortrack/server/application.yaml
@@ -9,3 +9,4 @@ influxdb:
    url: {SENSORTRACK_INFLUXDB_URL}
    org: {SENSORTRACK_INFLUXDB_ORG}
    token: {SENSORTRACK_INFLUXDB_TOKEN}
+   bucket: {SENSORTRACK_INFLUXDB_BUCKET}
