--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -51,6 +51,7 @@ pytest-asyncio==0.18.3; python_version >= "3.7"
 pytest-testdox==3.0.1; python_version >= "3.6"
 pytest==7.1.2; python_version >= "3.7"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+python-dotenv==0.20.0; python_version >= "3.5"
 pytz==2022.1; python_version >= "3.6"
 pytzdata==2020.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pyyaml==6.0; python_version >= "3.6"
