--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pycryptodomex = "^3.14.1"
 requests = "^2.28.0"
 tenacity = "^8.0.1"
 influxdb-client = "^1.29.1"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
