Fixes to local InfluxDB environment

--- a/config/local/sensortrack/server/server.env
+++ b/config/local/sensortrack/server/server.env
@@ -1,3 +1,5 @@
+SENSORTRACK_CONFIG_PATH=config/local/sensortrack/server/application.yaml
 SENSORTRACK_INFLUXDB_URL=http://localhost:8086
 SENSORTRACK_INFLUXDB_ORG=iot
+SENSORTRACK_INFLUXDB_BUCKET=metrics
 SENSORTRACK_INFLUXDB_TOKEN=admintoken
