Get grafana wired up with InfluxDB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,27 @@ services:
     volumes:
       - influxdb-storage:/var/lib/influxdb
     environment:
+      - INFLUXDB_DB=db0
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=my-user
       - DOCKER_INFLUXDB_INIT_PASSWORD=my-password
       - DOCKER_INFLUXDB_INIT_ORG=iot
       - DOCKER_INFLUXDB_INIT_BUCKET=metrics
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=admintoken
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./config/local/grafana/:/etc/grafana/provisioning
+    depends_on:
+      - influxdb
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_DATABASE_HOST=influxdb:8086
+      - GF_DATABASE_NAME=db0
 volumes:
   influxdb-storage:
+  grafana-storage:
