--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python: ["3.9", "3.10" ]
     steps: 
       - name: Check out code
@@ -33,21 +33,21 @@ jobs:
         run: poetry run pip install --upgrade pip setuptools wheel
       - name: Run Tox test suite
         run: poetry run tox -c .toxrc -e "checks,coverage"
-#       - name: Upload coverage data to coveralls.io
-#         run: poetry run coveralls --service=github
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#           COVERALLS_FLAG_NAME: ${{ runner.os }}-python${{ matrix.python }}
-#           COVERALLS_PARALLEL: true
-#   coveralls:
-#     name: Indicate completion to coveralls.io
-#     needs: build
-#     runs-on: ubuntu-latest
-#     container: python:3-slim
-#     steps:
-#     - name: Finished
-#       run: |
-#          pip3 install --upgrade coveralls
-#          coveralls --service=github --finish
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload coverage data to coveralls.io
+        run: poetry run coveralls --service=github
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_FLAG_NAME: ${{ runner.os }}-python${{ matrix.python }}
+          COVERALLS_PARALLEL: true
+  coveralls:
+    name: Indicate completion to coveralls.io
+    needs: build
+    runs-on: ubuntu-latest
+    container: python:3-slim
+    steps:
+    - name: Finished
+      run: |
+         pip3 install --upgrade coveralls
+         coveralls --service=github --finish
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
