--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,20 +3,6 @@ repos:
   - repo: local
     hooks:
       - id: system
-        name: Requirements
-        entry: poetry export --format=requirements.txt --without-hashes --dev --output=docs/requirements.txt
-        pass_filenames: false
-        language: system
-  - repo: local
-    hooks:
-      - id: system
-        name: Line Endings
-        entry: poetry run python utils/dos2unix.py docs/requirements.txt
-        pass_filenames: false
-        language: system
-  - repo: local
-    hooks:
-      - id: system
         name: Tab Characters
         entry: sh utils/check-tabs.sh
         pass_filenames: false
@@ -46,6 +32,6 @@ repos:
     hooks:
       - id: system
         name: Pylint
-        entry: poetry run pylint -j 0 src/sensortrack src/smartapp tests
+        entry: poetry run pylint -j 0 src/sensortrack tests
         pass_filenames: false
         language: system
