--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 description = "Historically track sensor data from SmartThings"
 authors = ["Kenneth J. Pronovici <pronovic@ieee.org>"]
 license = "Apache-2.0"
-readme = "PyPI.md"
-homepage = "https://pypi.org/project/sensor-track/"
+homepage = "https://github.com/pronovic/sensor-track"
 repository = "https://github.com/pronovic/sensor-track"
 include = [
    { path = 'Changelog', format = 'sdist' },
@@ -16,13 +15,13 @@ include = [
 ]
 packages = [ 
    { include = "sensortrack", from = "src" },
-   { include = "smartapp", from = "src" }, # will eventually be refactored out
 ]
 classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
-   "Operating System :: OS Independent",
+   "Operating System :: Unix",
    "Environment :: Console",
+   "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Home Automation",
@@ -30,17 +29,11 @@ classifiers=[
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
-pendulum = "^2.1.2"
-attrs = "^21.4.0"
-cattrs = "^22.1.0"
-PyYAML = "^6.0"
 fastapi = "^0.78.0"
 uvicorn = "^0.17.6"
-pycryptodomex = "^3.14.1"
-requests = "^2.28.0"
-tenacity = "^8.0.1"
 influxdb-client = "^1.29.1"
 python-dotenv = "^0.20.0"
+smartapp-sdk = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
