--- a/config/installed/sensortrack/server/application.yaml
+++ b/config/installed/sensortrack/server/application.yaml
@@ -5,6 +5,8 @@ dispatcher:
    logJson: false
 smartthings:
    baseUrl: https://api.smartthings.com
+weather:
+   baseUrl: https://api.weather.gov
 influxdb:
    url: {SENSORTRACK_INFLUXDB_URL}
    org: {SENSORTRACK_INFLUXDB_ORG}
