Implement weather client

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -33,6 +33,14 @@ ignore_missing_imports = True
 [mypy-influxdb_client.client.exceptions]
 ignore_missing_imports = True
 
+# There is no type hinting for jsonpath_ng
+[mypy-jsonpath_ng]
+ignore_missing_imports = True
+
+# There is no type hinting for pytemperature
+[mypy-pytemperature]
+ignore_missing_imports = True
+
 # There is no type hinting for pytest
 [mypy-pytest]
 ignore_missing_imports = True
