--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,9 @@ fastapi = "^0.78.0"
 uvicorn = "^0.17.6"
 influxdb-client = "^1.29.1"
 python-dotenv = "^0.20.0"
-smartapp-sdk = "^0.1.0"
+smartapp-sdk = "^0.4.0"
+jsonpath-ng = "^1.5.3"
+pytemperature = "^1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
