--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ python-dotenv = "^0.20.0"
 smartapp-sdk = "^0.4.0"
 jsonpath-ng = "^1.5.3"
 pytemperature = "^1.1"
+cachetools = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -54,6 +55,7 @@ Sphinx = "^4.5.0"
 types-PyYAML = "^6.0.8"
 pytest-asyncio = "^0.18.3"
 types-requests = "^2.27.30"
+types-cachetools = "^5.0.2"
 
 [tool.black]
 line-length = 132
