Use InfluxDBClient.write_api(SYNCHRONOUS) so file handles are closed

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -28,9 +28,7 @@ allow_untyped_defs = True
 allow_untyped_calls = True
 
 # There is no type hinting for influxdb_client
-[mypy-influxdb_client]
-ignore_missing_imports = True
-[mypy-influxdb_client.client.exceptions]
+[mypy-influxdb_client.*]
 ignore_missing_imports = True
 
 # There is no type hinting for jsonpath_ng
