--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -17,6 +17,6 @@ jobs:
     uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v1
     secrets: inherit
     with:
-      matrix-os-version: "[ 'ubuntu-latest', 'macos-latest' ]"
+      matrix-os-version: "[ 'ubuntu-latest' ]"
       matrix-python-version: "[ '3.9', '3.10' ]"
       poetry-version: "1.2.0"
