Refactor the run script and pre-commit hooks to reduce duplication

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,35 +3,7 @@ repos:
   - repo: local
     hooks:
       - id: system
-        name: Tab Characters
-        entry: sh utils/check-tabs.sh
-        pass_filenames: false
-        language: system
-  - repo: local
-    hooks:
-      - id: system
-        name: Black
-        entry: poetry run black .
-        pass_filenames: false
-        language: system
-  - repo: local
-    hooks:
-      - id: system
-        name: isort
-        entry: poetry run isort .
-        pass_filenames: false
-        language: system
-  - repo: local
-    hooks:
-      - id: system
-        name: MyPy
-        entry: poetry run mypy
-        pass_filenames: false
-        language: system
-  - repo: local
-    hooks:
-      - id: system
-        name: Pylint
-        entry: poetry run pylint -j 0 src/sensortrack tests
+        name: Code Style Checks
+        entry: ./run checks
         pass_filenames: false
         language: system
