--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,6 @@ pytemperature = "^1.1"
 pytest = "^7.1.2"
 pytest-testdox = "^3.0.1"
 coverage = "^6.3.2"
-tox = "^3.25.0"
 pylint = "^2.15.0"
 toml = "^0.10.2"
 pre-commit = "^2.18.1"
@@ -53,6 +52,7 @@ types-PyYAML = "^6.0.8"
 pytest-asyncio = "^0.18.3"
 types-requests = "^2.27.30"
 types-Jinja2 = "^2.11.9"
+colorama = "^0.4.5"
 
 [tool.black]
 line-length = 132
