--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ python-dotenv = "^0.20.0"
 smartapp-sdk = "^0.5.0"
 jsonpath-ng = "^1.5.3"
 pytemperature = "^1.1"
+importlib-resources = "^5.10.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.2"
