--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -18,5 +18,5 @@ jobs:
     secrets: inherit
     with:
       matrix-os-version: "[ 'ubuntu-latest' ]"
-      matrix-python-version: "[ '3.9', '3.10' ]"
-      poetry-version: "1.2.0"
+      matrix-python-version: "[ '3.9', '3.10', '3.11' ]"
+      poetry-version: "1.2.2"
