Add NOTICE file to sdist, alongside existing LICENSE file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ homepage = "https://github.com/pronovic/smartapp-sensortrack"
 repository = "https://github.com/pronovic/smartapp-sensortrack"
 include = [
    { path = 'Changelog', format = 'sdist' },
+   { path = 'NOTICE', format = 'sdist' },
    { path = 'LICENSE', format = 'sdist' },
    { path = 'README.md', format = 'sdist' },
    { path = 'docs', format = 'sdist' },
