--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -15,7 +15,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  build-and-test:
+  linux-build-and-test:
     name: "Linux"
     uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v3
     secrets: inherit
