Major dependency updates

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -26,6 +26,7 @@ warn_unused_ignores = True
 check_untyped_defs = False
 allow_untyped_defs = True
 allow_untyped_calls = True
+disable_error_code = annotation-unchecked
 
 # There is no type hinting for influxdb_client
 [mypy-influxdb_client.*]
