--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,35 +38,36 @@ format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base 
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
-fastapi = "^0.78.0"
-uvicorn = "^0.17.6"
-influxdb-client = "^1.29.1"
-python-dotenv = "^0.20.0"
-smartapp-sdk = "^0.5.0"
+fastapi = "~0, >=0.78.0"
+uvicorn = "~0, >=0.17.6"
+influxdb-client = "^1.36.1"
+python-dotenv = "^1.0.0"
+smartapp-sdk = "~0, >=0.5.0"
 jsonpath-ng = "^1.5.3"
 pytemperature = "^1.1"
-importlib-resources = "^5.10.0"
+importlib-resources = "^5.12.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.1.2"
+pytest = "^7.2.1"
 pytest-testdox = "^3.0.1"
-coverage = "^6.3.2"
-pylint = "^2.15.0"
-toml = "^0.10.2"
-pre-commit = "^2.18.1"
-black = "^22.3.0"
-mypy = "^0.950"
-isort = "^5.10.1"
+coverage = "^6.5.0"
+pylint = "^2.16.2"
+toml = "~0, >=0.10.2"
+pre-commit = "^3.1.0"
+black = "^23.1.0"
+mypy = "^1.0.1"
+isort = "^5.12.0"
 coveralls = "^3.3.1"
-types-PyYAML = "^6.0.8"
-pytest-asyncio = "^0.18.3"
-types-requests = "^2.27.30"
+types-PyYAML = "^6.0.12.8"
+pytest-asyncio = "~0, >=0.20.3"
+types-requests = "^2.28.11.15"
 types-Jinja2 = "^2.11.9"
-colorama = "^0.4.5"
+colorama = "~0, >=0.4.6"
+httpx = "~0, >=0.23.3"
 
 [tool.black]
 line-length = 132
-target-version = ['py39', 'py310' ]
+target-version = ['py39', 'py310', 'py311' ]
 include = '(src\/scripts\/.*$|\.pyi?$)'
 exclude = '''
 /(
