--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ types-requests = "^2.28.11.15"
 types-Jinja2 = "^2.11.9"
 colorama = "~0, >=0.4.6"
 httpx = "~0, >=0.23.3"
+responses = "~0, >=0.22.0"
 
 [tool.black]
 line-length = 132
