--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -21,8 +21,8 @@ jobs:
     secrets: inherit
     with:
       matrix-os-version: "[ 'ubuntu-latest' ]"
-      matrix-python-version: "[ '3.9', '3.10', '3.11' ]"
-      poetry-version: "1.5.1"
+      matrix-python-version: "[ '3.9', '3.10', '3.11', '3.12' ]"
+      poetry-version: "1.6.1"
   release:
     name: "Release"
     if: github.ref_type == 'tag'
@@ -31,5 +31,5 @@ jobs:
     secrets: inherit
     with:
       python-version: "3.9"
-      poetry-version: "1.5.1"
+      poetry-version: "1.6.1"
       publish-pypi: false
