--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,3 @@
-# pytest.ini
 [pytest]
-asyncio_mode=strict
-filterwarnings =
-    ignore:"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead
-
+filterwarnings = 
+   ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning
