Put back lost pytest changes

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
+asyncio_mode=strict
 filterwarnings = 
+   ignore:"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead
    ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning
