--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,37 +38,37 @@ format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base 
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
-fastapi = "~0, >=0.96.0"
-uvicorn = "~0, >=0.20.0"
-influxdb-client = "^1.36.1"
+fastapi = "~0, >=0.103.2"
+uvicorn = "~0, >=0.23.2"
+influxdb-client = "^1.38.0"
 python-dotenv = "^1.0.0"
-smartapp-sdk = "~0, >=0.6.2"
-jsonpath-ng = "^1.5.3"
+smartapp-sdk = "~0, >=0.6.3"
+jsonpath-ng = "^1.6.0"
 pytemperature = "^1.1"
-importlib-resources = "^5.12.0"
+importlib-resources = "^6.1.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.1"
-pytest-testdox = "^3.0.1"
-coverage = "^6.5.0"
-pylint = "^2.16.2"
+pytest = "^7.4.2"
+pytest-testdox = "^3.1.0"
+coverage = "^6.5.0"  # coveralls needs v6
+pylint = "^3.0.1"
 toml = "~0, >=0.10.2"
-pre-commit = "^3.1.0"
-black = "^23.1.0"
-mypy = "^1.0.1"
+pre-commit = "^3.4.0"
+black = "^23.9.1"
+mypy = "^1.6.0"
 isort = "^5.12.0"
 coveralls = "^3.3.1"
-types-PyYAML = "^6.0.12.8"
-pytest-asyncio = "~0, >=0.20.3"
-types-requests = "^2.31.0.1"
+types-PyYAML = "^6.0.12.12"
+pytest-asyncio = "~0, >=0.21.1"
+types-requests = "^2.31.0.8"
 types-Jinja2 = "^2.11.9"
 colorama = "~0, >=0.4.6"
-httpx = "~0, >=0.23.3"
-responses = "~0, >=0.22.0"
+httpx = "~0, >=0.25.0"
+responses = "~0, >=0.23.3"
 
 [tool.black]
 line-length = 132
-target-version = ['py39', 'py310', 'py311' ]
+target-version = [ 'py39', 'py310', 'py311', 'py312' ]
 include = '(src\/scripts\/.*$|\.pyi?$)'
 exclude = '''
 /(
