--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ asyncio_mode=strict
 filterwarnings = 
    ignore:"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead
    ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning
+   ignore:.*The 'app' shortcut is now deprecated
