--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,14 +50,13 @@ importlib-resources = "^6.1.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
 pytest-testdox = "^3.1.0"
-coverage = "^6.5.0"  # coveralls needs v6
+coverage = "^7.4.4"
 pylint = "^3.0.1"
 toml = "~0, >=0.10.2"
 pre-commit = "^3.4.0"
 black = "^24.2.0"
 mypy = "^1.6.0"
 isort = "^5.12.0"
-coveralls = "^3.3.1"
 types-PyYAML = "^6.0.12.12"
 pytest-asyncio = "~0, >=0.21.1"
 types-requests = "^2.31.0.8"
