--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ fastapi = "~0, >=0.103.2"
 uvicorn = "~0, >=0.23.2"
 influxdb-client = "^1.38.0"
 python-dotenv = "^1.0.0"
-smartapp-sdk = "~0, >=0.6.7"
+smartapp-sdk = "~0, >=0.6.8"
 jsonpath-ng = "^1.6.0"
 pytemperature = "^1.1"
 importlib-resources = "^6.1.0"
@@ -53,7 +53,7 @@ pytest-testdox = "^3.1.0"
 coverage = "^7.4.4"
 pylint = "^3.0.1"
 toml = "~0, >=0.10.2"
-pre-commit = "^3.4.0"
+pre-commit = "^4.0.1"
 black = "^24.2.0"
 mypy = "^1.6.0"
 isort = "^5.12.0"
@@ -64,10 +64,11 @@ types-Jinja2 = "^2.11.9"
 colorama = "~0, >=0.4.6"
 httpx = "~0, >=0.25.0"
 responses = "~0, >=0.23.3"
+types-influxdb-client = "^1.45.0.20240915"
 
 [tool.black]
 line-length = 132
-target-version = [ 'py310', 'py311', 'py312' ]
+target-version = [ 'py310', 'py311', 'py312', 'py313' ]
 include = '(src\/scripts\/.*$|\.pyi?$)'
 exclude = '''
 /(
