--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ types-influxdb-client = "^1.45.0.20240915"
 [tool.black]
 line-length = 132
 target-version = [ 'py310', 'py311', 'py312', 'py313' ]
-include = '(src\/scripts\/.*$|\.pyi?$)'
+include = '\.pyi?$'
 exclude = '''
 /(
     \.git
@@ -87,7 +87,70 @@ exclude = '''
 [tool.isort]
 profile = "black"
 line_length = 132
-skip_glob = [ "docs", "notes" ]
+skip_glob = [ "docs", "notes", ".poetry" ]
+
+[tool.coverage.paths]
+source = [ "src" ]
+
+[tool.coverage.run]
+branch = true
+source = [ "src/sensortrack" ]
+
+[tool.coverage.report]
+show_missing = false
+precision = 1
+
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function"
+filterwarnings = [
+    'error',  # turn all Python warnings into test failures, so they're hard to miss
+    'ignore:"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead',
+    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
+    "ignore:.*The 'app' shortcut is now deprecated"
+]
+
+[tool.mypy]
+# Settings are mostly equivalent to strict=true as of v1.14.1
+pretty = true
+show_absolute_path = true
+show_column_numbers = true
+show_error_codes = true
+files = [ "src/sensortrack", "tests" ]
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = false
+disallow_untyped_defs = true
+no_implicit_optional = true
+no_implicit_reexport = true
+strict_equality = true
+strict_optional = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_no_return = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
+# It's hard to make tests compliant using unittest.mock
+[[tool.mypy.overrides]]
+module = "tests.*"
+check_untyped_defs = false
+allow_untyped_defs = true
+allow_untyped_calls = true
+disable_error_code = [ "annotation-unchecked" ]
+
+# There is no type hinting for pytest
+[[tool.mypy.overrides]]
+module = "pytest"
+ignore_missing_imports = true
+
+# There is no type hinting for these modules
+[[tool.mypy.overrides]]
+module = [ "influxdb_client", "jsonpath_ng", "pytemperature" ]
+ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
