--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dependencies = [
    "smartapp-sdk (>=0.6.8,<1.0.0)",
    "jsonpath-ng (>=1.6.0,<2.0.0)",
    "pytemperature (>=1.1,<2.0)",
-   "importlib-resources (>=6.1.0,<=7.0.0)",
+   "importlib-resources (>=6.1.0,<7.0.0)",
 ]
 
 [project.urls]
